@@ -291,7 +291,10 @@ try
 			libs := l :: !libs;
 			Common.define com l;
 		),"<library[:version]> : use an haxelib library");
-		("-D",Arg.String (Common.define com),"<var> : define a conditional compilation flag");
+		("-D",Arg.String (fun var ->
+			if var = "use_rtti_doc" then Parser.use_doc := true;
+			Common.define com var
+		),"<var> : define a conditional compilation flag");
 		("-resource",Arg.String (fun res ->
 			let file, name = (match ExtString.String.nsplit res "@" with
 				| [file; name] -> file, name
